# Connect4-rl

./: README.md  pyproject.toml
src/connect4_rl/: argparse.py  main.py
src/connect4_rl/agents/: random_agent.py  smart_agent.py
src/connect4_rl/game/: board.py  human.py  player.py
tests/: test_board.py
