[project]
name = "connect4-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
play = "connect4_rl.main:main"

[tool.uv]
package = true